--- a/src/scss/_component-styles/_template.scss
+++ b/src/scss/_component-styles/_template.scss
@@ -18,9 +18,7 @@ a { text-decoration: none; }
 ul li {	display: inline-block; }
 
 button, input, textarea{
-  -webkit-border-radius: 5px;
-  -moz-border-radius: 5px;
-  border-radius: 5px;
+  @include roundCorner(0px);
 }
 
 button {
@@ -45,8 +43,6 @@ a:hover{
 .nav-link:hover{
  @include custom-transform( 1.3 );
 }
-
-
 
 
 .flex-container {
@@ -78,7 +74,7 @@ a:hover{
   width: auto;
   height: auto;
   position: relative;
-  top: $nav-height;
+  //top: $nav-height;
 }
 
 .section-content {
